--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,10 @@
     <string name="forgot_pwd_2">Forgot password</string>
     <string name="forgot_pwd_2_text">Enter your email to receive an email to reset your password.</string>
     <string name="signup">Sign up</string>
-    <string-array name="gender_options">
+    <string name="select_gender_hint">Select Gender</string>
+    <string name="select_location_hint">Select Location</string>
+    <string-array name="gender_array">
+        <item>@string/select_gender_hint</item>
         <item>Male</item>
         <item>Female</item>
     </string-array>
