--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,16 @@
     <string name="because">Because...</string>
     <string name="tohire">I want to hire them</string>
     <string name="tolikeart">I just like art</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="poetry">Poetry</string>
+    <string name="photography">Photography</string>
+    <string name="mixed_media">Mixed media</string>
+    <string name="music">Music</string>
+    <string name="painting">Painting</string>
+    <string name="acting">Acting</string>
+    <string name="design">Design</string>
+    <string name="digital_art">Digital art</string>
+    <string name="textile_art">Textile art</string>
+    <string name="dance">Dance</string>
+    <string name="animation">Animation</string>
+    <string name="comedy">Comedy</string>
 </resources>
