--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="forgot_pwd_2">Forgot password</string>
     <string name="forgot_pwd_2_text">Enter your email to receive an email to reset your password.</string>
     <string name="signup">Sign up</string>
+    <string name="search">Search</string>
     <string name="select_gender_hint">Select Gender</string>
     <string name="select_location_hint">Select Location</string>
     <string-array name="gender_array">
@@ -25,4 +26,7 @@
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_people">People</string>
+    <string name="search_posts">Posts</string>
+    <string name="search_jobs">Jobs</string>
 </resources>
