--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,8 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="app_name">ArtCon_test</string>
+<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
+<!--    <string name="app_name">ArtCon_test</string>-->
     <string name="welcom_newuser">Welcom, User!</string>
     <string name="setup_profile">Let\'s set up your profile</string>
     <string name="add_profilepicture">Add a profile picture</string>
