--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="search_jobs">Jobs</string>
     <string name="logout">Logout</string>
     <string name="setting">Setting</string>
+    <string name="no_result_found">No Results Found</string>
 </resources>
