--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-
-    <string name="welcom_newuser">Welcom, User!</string>
+    <string name="welcom_newuser">Welcome, User!</string>
     <string name="setup_profile">Let\'s set up your profile</string>
     <string name="add_profilepicture">Add a profile picture</string>
     <string name="add_picture">Add photo</string>
@@ -55,7 +54,10 @@
     <string name="search_posts">Posts</string>
     <string name="search_jobs">Jobs</string>
     <string name="logout">Logout</string>
-    <string name="setting">Setting</string>
     <string name="no_result_found">No Results Found</string>
+    <string name="add_post">Add post</string>
+    <string name="add_portfolio_post">Add portfolio post</string>
+    <string name="add_job_post">Add job post</string>
+    <string name="edit_profile">Edit Profile</string>
 
 </resources>
