--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,6 @@
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
     <string name="choose_interests">For a better experience, choose some of your interests:</string>
+    <string name="follow">Follow</string>
 
 </resources>
