--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="add_portfolio_post">Add portfolio post</string>
     <string name="add_job_post">Add job post</string>
     <string name="edit_profile">Edit Profile</string>
+    <string name="date_format">yyyy/MM/dd</string>
 
 </resources>
